# ailanguagetutor

./: .gitignore  AGENTS.md  BUILD_STATUS.md  README.md  ailanguagetutor.md  build.gradle.kts  gradle.properties  gradlew.bat  keystore.properties.example  local.env.properties.example  settings.gradle.kts  upgrade.md
server/v2/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
server/v2/app/: config.py  main.py  schemas.py
server/v2/app/backends/: nllb_lang.py  nllb_translator.py  ollama.py  openvino_runtime.py
server/v2/app/routers/: admin.py  ai_modes.py  ask.py  clean_ocr.py  deps.py  grammar_book.py  health.py  ide.py  prefetch_ai.py  prefetch_grammar.py  scan_enhance.py  stt.py  translate.py  translate_strings.py  tts.py
server/v2/app/services/: cache_l1.py  cache_l2.py  (+27 more)
server/v2/data/: ai_cache.db
server/v2/deploy/: deploy.sh  docker-compose.example.yml  intel-arc-openvino.md  models-download-quantization.md  rate-limiting.md
server/v2/docs/: MODEL_ROUTER.md  ROUTING_AND_CACHE.md
server/v2/models/: manifest.json
server/v2/scripts/: clear-cache.ps1  download-models.ps1  download-models.sh  download_nllb.py  download_scan_models.py  export_scan_onnx.py  pull-nllb-model.ps1  pull-ollama-models.ps1  rrdbnet_arch.py  run-dev.ps1  run-dev.sh  setup_models.ps1  setup_models.sh  setup_scan_models.ps1  validate_scan_levels.py
server/v2/tests/: scan_fixtures.py  test_cache.py  test_gpu_status.py  test_grammar_book.py  test_grammar_prefetch.py  test_router.py  test_scan_enhancer.py  test_scan_levels_validation.py  test_translation_quality.py
(+372 files in other folders)
