[project]
name = "cheradip-home-ai"
version = "2.0.0-dev"
description = "Cheradip Home AI Server — Intel Arc inference for AI Language Tutor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]
scan = [
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.19.0",
    "huggingface_hub>=0.26.0",
    "pyzbar>=0.1.9; platform_system != 'Windows'",
]
openvino = [
    "openvino>=2024.4.0",
    "optimum[openvino]>=1.20.0",
    "transformers>=4.45.0",
    "huggingface_hub>=0.26.0",
    "torch>=2.4.0",
]
redis = ["redis>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
